# amazon-product-monitor-mcp

./: README.md
amazon-product-monitor-mcp/: AFFILIATE_INTEGRATION_SUMMARY.md  GITHUB_SETUP_GUIDE.md  LICENSE  README.docx  README.md  main.py  mcp-server.json  product_monitor_data.json  pyproject.toml  requirements.txt  run.sh  sample_affiliate_report.md  server.py  test_affiliate_example.py
amazon-product-monitor-mcp/examples/: usage_examples.py
amazon-product-monitor-mcp/src/amazon_monitor/: __init__.py  tools.py
amazon-product-monitor-mcp/tests/: test_mcp_server.py
