[project]
name = "amazon-product-monitor-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.4",
    "email-validator>=2.2.0",
    "fastmcp>=2.10.5",
    "lxml>=6.0.0",
    "playwright>=1.52.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "selenium>=4.34.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
